--- a/less/main.less
+++ b/less/main.less
@@ -8,6 +8,7 @@
 	width: 100%;
 	height: @default_height;
 	display: inline-block;
+	text-align: center;
 
 	#spawner
 	{
@@ -16,6 +17,7 @@
 		float: left;
 		padding: 0 0 0 0;
 		margin: 0 auto;
+		display: inline-block;
 	}
 
 	#arena
@@ -23,13 +25,10 @@
 		width: @img_width;
 		height: @img_height;
 		float: left;
-		/*
-		background-image: url('./img/arena3.png');
-		background-size: contain;
-		*/
 		margin: 0 auto;
 		margin-top: @top_padding;
 		padding: 0 0 0 0;
+		display: inline-block;
 	}
 
 	#shop
@@ -39,5 +38,6 @@
 		float: left;
 		padding: 0 0 0 0;
 		margin: 0 auto;
+		display: inline-block;
 	}
 }
