--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 595px;
   display: inline-block;
+  text-align: center;
 }
 #toplevel #spawner {
   width: 295px;
@@ -9,18 +10,16 @@
   float: left;
   padding: 0 0 0 0;
   margin: 0 auto;
+  display: inline-block;
 }
 #toplevel #arena {
   width: 590px;
   height: 340px;
   float: left;
-  /*
-		background-image: url('./img/arena3.png');
-		background-size: contain;
-		*/
   margin: 0 auto;
   margin-top: 127.5px;
   padding: 0 0 0 0;
+  display: inline-block;
 }
 #toplevel #shop {
   width: 295px;
@@ -28,4 +27,5 @@
   float: left;
   padding: 0 0 0 0;
   margin: 0 auto;
+  display: inline-block;
 }
