reimplemented game state stuff

--- a/less/main.less
+++ b/less/main.less
@@ -72,7 +72,7 @@
 	   position: absolute;
 	   width: 1180px;
 	   height: @default_height;
-	   background-image: url("img/splash.jpg");
+	   background-image: url("img/splashscreen.png");
 	   background-repeat: no-repeat;
 	   background-size: 100% 100%;
 	   border: 5px double #000;
@@ -114,6 +114,7 @@
 		position: absolute;
 		width: 1180px;
 		height: @default_height;
+		background-color: white;
 		border: 5px double #000;
 		display: none;
 
