background color changes

--- a/less/main.less
+++ b/less/main.less
@@ -85,6 +85,7 @@
 		width: 1180px;
 		height: @default_height; 
 		border: 5px double #000;
+		background-color: white;
 		display: none;
 		text-align: center;
 
