--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@
   width: 1180px;
   height: 595px;
   border: 5px double #000;
+  background-color: white;
   display: none;
   text-align: center;
 }
