Added the help screen.

--- a/less/main.less
+++ b/less/main.less
@@ -79,6 +79,39 @@
 	   display: none;
 	}
 
+	#help_arena{
+	   position: absolute;
+	   width: 1180px;
+	   height: @default_height + @cover_doors;
+	   background-image: url("img/help_screen/help_arena.png");
+	   background-repeat: no-repeat;
+	   background-size: 100% 100%;
+	   border: 5px double #000;
+	   display: none;
+	}
+	
+	#help_stats{
+	   position: absolute;
+	   width: 1180px;
+	   height: @default_height + @cover_doors;
+	   background-image: url("img/help_screen/help_stats.png");
+	   background-repeat: no-repeat;
+	   background-size: 100% 100%;
+	   border: 5px double #000;
+	   display: none;
+	}
+	
+	#help_shop{
+	   position: absolute;
+	   width: 1180px;
+	   height: @default_height + @cover_doors;
+	   background-image: url("img/help_screen/help_shop.png");
+	   background-repeat: no-repeat;
+	   background-size: 100% 100%;
+	   border: 5px double #000;
+	   display: none;
+	}
+	
 	#game_over
 	{
 		position: absolute;
