--- a/less/main.less
+++ b/less/main.less
@@ -85,7 +85,7 @@
 	   display: none;
 	}
 
-	#help_arena{
+	.help_arena{
 	   position: absolute;
 	   width: 1180px;
 	   height: @default_height + @cover_doors;
@@ -96,7 +96,7 @@
 	   display: none;
 	}
 	
-	#help_stats{
+	.help_stats{
 	   position: absolute;
 	   width: 1180px;
 	   height: @default_height + @cover_doors;
@@ -107,7 +107,7 @@
 	   display: none;
 	}
 	
-	#help_shop{
+	.help_shop{
 	   position: absolute;
 	   width: 1180px;
 	   height: @default_height + @cover_doors;
