--- a/main.css
+++ b/main.css
@@ -128,6 +128,10 @@
 }
 #toplevel #credits #cont_list li {
   font-size: 18px;
+  text-align: left;
+}
+#toplevel #credits .left_align {
+  text-align: left;
 }
 .menu {
   position: absolute;
