Game is no longer split by bootstrap when we shrink the size of the screen.

--- a/less/main.less
+++ b/less/main.less
@@ -7,7 +7,7 @@
 
 #toplevel
 {
-	width: 100%;
+	width: @default_width !important;
 	height: @default_height;
 	display: inline-block;
 	text-align: center;
